<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_plane_inspection</name>
  <version>0.0.0</version>
  <description>.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>TODO</license>
  <depend>rclpy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
